# python_log_sample

./: README.md  logging.yml  pyproject.toml
log_config/: main.py  module2.py
log_config/module1/: module1.py  submodule1.py
log_config/module3/: module3.py  submodule3.py
